# Hackathon-II

./: .gitignore  CLAUDE.md  README.md  constitution.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  CLAUDE.md  migrate_phase3.py  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  tasks.py
backend/app/services/: ai_service.py
backend/tests/: conftest.py  test_health.py  test_tasks.py
frontend/: .env.example  CLAUDE.md  Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/session/: route.ts
frontend/app/api/auth/signin/: route.ts
frontend/app/api/auth/signup/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: AISummary.tsx  DeleteConfirmDialog.tsx  EmptyState.tsx  Navbar.tsx  SmartTaskForm.tsx  Suggestions.tsx  TaskEditDialog.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TaskSkeleton.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  postgres-deployment.yaml  secrets.yaml
specs/: phase1-console-app.md  phase2-fullstack-app.md  phase3-ai-integration.md  phase4-local-k8s.md  phase5-ci-cd-pipeline.md  phase6-cloud-deployment.md  phase7-ui-overhaul.md
specs/history/: .gitkeep  phase1-console-app-v1.md
src/todo/: main.py  models.py  storage.py
