[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Evolution of Todo - Spec-Driven Development Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
